# nanda-recovery-beacon

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Makefile  README.md  SKILL.md  docker-compose.yml  fly.toml  railway.json  render.yaml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  artifact_verify.py  cli.py  config.py  context_eval.py  db.py  errors.py  idempotency.py  logging_config.py  main.py  metrics.py  middleware.py  models.py  rate_limit.py  reaper.py  schemas.py  security.py  state_machine.py  storage.py  util.py
backend/app/api/: deps.py  serialize.py  system.py
backend/app/api/v1/: artifacts.py  checkpoints.py  claims.py  events.py  workflows.py
backend/app/services/: checkpoints.py  claims.py  events.py  recovery.py  workflows.py
backend/tests/: conftest.py  test_api_surface.py  test_artifacts.py  test_checkpoints.py  test_claims.py  test_concurrency.py  test_context_eval.py  test_e2e_recovery.py  test_failure_detection.py  test_workflows.py
frontend/: .dockerignore  .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/components/: auto-refresh.tsx  copy-button.tsx  (+4 more)
references/: api-reference.md  checkpoint-schema.md  error-codes.md  recovery-examples.md
scripts/: verify_deployment.py  verify_deployment.sh
(+8 files in other folders)
